# NC.Core/Models/Contracts/RegistrationResponse.cs
@@ -1,0 +1,9 @@
+﻿using NC.Core.Models.Base;
+
+namespace NC.Core.Models.Contracts
+{
+    public class RegistrationResponse : BaseResponse
+    {
+        public string Name { get; set; } = null!;
+    }
+}
