# Web/NC.Web/NC.Web.Server/Controllers/CacheController.cs
@@ -3,24 +3,20 @@ using NC.Core.Services;
 
 namespace NC.Web.Server.Controllers
 {
-    [ApiController]
-    [Route("api/[controller]")]
-
-    public class CacheController(CacheService cacheService) : ControllerBase
+    public class CacheController(CacheService cacheService) : BaseController
     {
-        [HttpPost("remove")]
+        [HttpPost]
         public Task Remove([FromQuery] string key)
         {
             cacheService.Remove(key);
             return Task.FromResult(Ok());
         }
 
-        [HttpPost("clear")]
+        [HttpPost]
         public Task Clear()
         {
             cacheService.Clear();
             return Task.FromResult(Ok());
         }
-
     }
 }
